Closed Bug 429505 Opened 18 years ago Closed 18 years ago

OnItemRemoved() fails to live-update for children that are folder-shortcuts

Categories

(Firefox :: Bookmarks & History, defect, P2)

defect

Tracking

()

VERIFIED FIXED
Firefox 3

People

(Reporter: dietrich, Assigned: dietrich)

References

Details

(Whiteboard: [has patch][has reviews])

Attachments

(1 file)

When a folder shortcut is removed, the query item id is send in the notification. Therefore, NHR should check for that in the observer method.
Attached patch fix + testSplinter Review
Assignee: nobody → dietrich
Status: NEW → ASSIGNED
Attachment #316245 - Flags: review?(mano)
Blocks: 405938
drivers: easy to reproduce live-update bug. low risk fix, has test.
Flags: blocking-firefox3?
Priority: -- → P2
Target Milestone: --- → Firefox 3
drivers: also, this blocks another blocker STR: 1. create a new bookmark w/ URI "place:folder=TOOLBAR" in the bookmarks menu 2. open the library, click the menu folder in the left pane 3. expand the menu folder in the left pane, so that the new toolbar folder shortcut is visible 4. delete the folder shortcut in the *right* pane Expected: toolbar shortcut in the left pane disappears Actual: toolbar shortcut still visible in the left pane, even though it's been deleted
Flags: blocking-firefox3? → blocking-firefox3+
Shouldn't you check against both ids?
Comment on attachment 316245 [details] [diff] [review] fix + test <dietrich> "Shouldn't you check against both ids?" - isn't that what that patch does? right sorry, r=mano (check the test license header, is that really marco's?)
Attachment #316245 - Flags: review?(mano) → review+
Whiteboard: [has patch][has reviews]
Comment on attachment 316245 [details] [diff] [review] fix + test Drivers: see comment #2
Attachment #316245 - Flags: approval1.9?
Comment on attachment 316245 [details] [diff] [review] fix + test a1.9+=damons
Attachment #316245 - Flags: approval1.9? → approval1.9+
Checking in toolkit/components/places/src/nsNavHistoryResult.cpp; /cvsroot/mozilla/toolkit/components/places/src/nsNavHistoryResult.cpp,v <-- nsNavHistoryResult.cpp new revision: 1.142; previous revision: 1.141 done Checking in toolkit/components/places/tests/bookmarks/test_424958-json-quoted-folders.js; /cvsroot/mozilla/toolkit/components/places/tests/bookmarks/test_424958-json-quoted-folders.js,v <-- test_424958-json-quoted-folders.js new revision: 1.3; previous revision: 1.2 done RCS file: /cvsroot/mozilla/toolkit/components/places/tests/unit/test_429505_remove_shortcuts.js,v done Checking in toolkit/components/places/tests/unit/test_429505_remove_shortcuts.js; /cvsroot/mozilla/toolkit/components/places/tests/unit/test_429505_remove_shortcuts.js,v <-- test_429505_remove_shortcuts.js initial revision: 1.1 done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
verified with Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1b3pre) Gecko/20090128 Shiretoko/3.1b3pre
Status: RESOLVED → VERIFIED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: