Bug 429505 - OnItemRemoved() fails to live-update for children that are folder-shortcuts (r=mano, a=damon)